--- a/assets/css/saying.css
+++ b/assets/css/saying.css
@@ -13,12 +13,19 @@
     background-color: #E2E2E2;
     border-radius: 10px;
 }
+.saying__cards__card__comment::after {
+    content: url(../images/icons/triangle-gray.svg);
+    position: relative;
+    width: 30px;
+    top: 60px;
+    left: -150px;
+}
 .saying__cards__card img {
     padding-left: 70px;
 }
 .saying__cards__card__person {
     display: flex;
-    padding-top: 46px;
+    padding-top: 70px;
 
 }
 .saying__cards__card__person img {
