--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,8 +96,7 @@ h3 {
     padding: 15px 0;
 }
 .options__card_up {
-    position: relative;
-    top: -20px;
+    margin-top: -20px;
     filter: drop-shadow(0px 4px 10px rgba(51, 51, 51, 0.2));
 }
 .options .cards-wrapper {
