--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,11 @@
     column-gap: 30px;
 }
 
+h1 {
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 56px;
+}
 h2 {
     font-size: 36px;
 }
@@ -26,6 +31,11 @@ h3 {
     font-size: 24px;
 }
 
+.title-block h1 {
+    padding: 112px 0 60px 0;
+    text-align: left;
+    color: #FFF;
+}
 .title-block h2 {
     padding: 112px 0 60px 0;
     text-align: center;
@@ -68,6 +78,10 @@ h3 {
 /* header */
 .header {
     background-color: #000;
+    padding: 0 170px;
+}
+.wrapper_header {
+    width: 100%;
 }
 .header__content {
     display: flex;
@@ -88,6 +102,44 @@ h3 {
 .header__navigation li:hover {
     background-color: #EC7979;
     text-transform: uppercase;
+}
+
+/* main section*/
+.main {
+    padding: 207px 0 183px 0;
+    background: #000 url(../images/bg-main.png) no-repeat center center / cover;
+}
+.main__content {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 30px;
+}
+.main .title-block {
+    max-width: 670px;
+}
+.main .title-block p {
+    color: #FFF;
+    text-align: left;
+    width: 270px;
+}
+.main .title-block__separator {
+    width: 170px;
+    height: 0px;
+    border-bottom: 1px solid #FFF;
+    margin: 0 0 45px 0;
+}
+.main .btn-1 {
+    padding: 20px 90px;
+    margin-top: 42px;
+}
+.main__form {
+    width: 470px;
+    height: 450px;
+    background-color: #FFF;
+    border-radius: 10px;
+}
+.main__logo {
+    transform: translate(46px, 46px) scale(1.9);
 }
 
 /* social media */
