--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@
     padding: 0 15px;
     margin: 0 auto;
 }
+.wrapper-main-form {
+    width: 370px;
+    margin: 0 auto;
+}
 .cards-wrapper {
     display: flex;
     justify-content: space-between;
@@ -98,6 +102,7 @@ h3 {
     font-size: 14px;
     color: #FFF;
     padding: 34px 32px 30px 32px;
+    transition: all 0.5s ease;
 }
 .header__navigation li:hover {
     background-color: #EC7979;
@@ -140,6 +145,57 @@ h3 {
 }
 .main__logo {
     transform: translate(46px, 46px) scale(1.9);
+}
+.main__form {
+    padding-top: 37px;
+    position: relative;
+}
+.main__form__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.main__form__content span {
+    color: #EC7979;
+}
+.main__form__content h3 {
+    text-transform: uppercase;
+    margin-bottom: 60px;
+    color: #333;
+}
+.main__form__content input[type="text"], .main__form__content input[type="email"], .main__form__content input[type="password"] {
+    width: 100%;
+    height: 38px;
+    border: none;
+    border-bottom: 1px solid #BDBDBD;
+    padding-bottom: 10px;
+    margin-bottom: 35px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+}
+.main__form__content input[type="text"]::placeholder, .main__form__content input[type="email"]::placeholder, .main__form__content input[type="password"]::placeholder {
+    color: #BDBDBD;
+}
+.main__form input[type="submit"] {
+    width: 100%;
+    border: none;
+    background-color: #EC7979;
+    color: #FFF;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    padding: 24px 0;
+    position: absolute;
+    bottom: 0;
+    border-radius: 0 0 10px 10px;
+    transition: all 0.5s ease;
+    
+}
+.main__form input[type="submit"]:hover {
+    background-color: #AB4949;
+}
+.main__form input[type="submit"]:active {
+    box-shadow: inset 0px 0px 10px #AB4949;
 }
 
 /* social media */
