--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,19 +109,6 @@ h4 {
 .header__logo {
     margin: 22px 0;
 }
-.header__navigation li {
-    display: inline-block;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 600;
-    font-size: 14px;
-    color: #FFF;
-    padding: 34px 32px 30px 32px;
-    transition: all 0.5s ease;
-}
-.header__navigation li:hover {
-    background-color: #EC7979;
-    text-transform: uppercase;
-}
 .header__navigation a {
     display: inline-block;
     text-decoration: none;
@@ -264,76 +251,76 @@ h4 {
 }
 
 /* tabs content */
-.tabs-content {
+
+.features {
     padding: 100px 0 50px 0;
 }
 .tabs {
-    display: inline-block;
+    display: flex;
+    flex-wrap: wrap;
     min-width: 100%;
 }
-.tabs label {
-    display: block;
-    float: left;
-    width: 200px;
-    padding: 10px 0;
-    text-align: center;
-    text-transform: uppercase;
-    position: relative;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 14px;
-}
-.tabs [id^="tab"]:checked + label::after {
-    position: absolute;
-    content: '';
-    width: 200px;
-    border-bottom: 2px solid #FFF;
-    left: 0px;
-    bottom: -2px;
-}
-.tabs input {
+.tabs input, .tabs__content {
     display: none;
-    
 }
-.tabs [id^="tab"]:checked + label {
-    border-left: 2px solid #C6CBCD;
-    border-top: 2px solid #C6CBCD;
-    border-right: 2px solid #C6CBCD;
-    border-radius: 5px 5px 0 0;
-}
-#tab-1:checked ~ #tab-content-1, #tab-2:checked ~ #tab-content-2, #tab-3:checked ~ #tab-content-3
-{
-    display: flex;
-    justify-content: space-between;
-}
-.tab-content {
-    display: none;
-    float: left;
+.tabs__content {
     border: 2px solid #C6CBCD;
     width: 100%;
     padding-left: 100px;
+    position: relative;
+    order: 1;
 }
-.tab-content .tab-content__left {
+.tabs__content .tabs__content__left {
     width: 570px;
 }
-.tab-content .tab-content__left h3 {
+.tabs__content .tabs__content__left h3 {
     margin: 50px 0 80px 0;
 }
-.tab-content .tab-content__left p:not(:last-child) {
+.tabs__content .tabs__content__left p:not(:last-child){
     margin-bottom: 25px;
 }
-.tab-content .btn-1 {
+.tabs__content .btn-1 {
     padding: 20px 90px;
     margin: 27px 0 50px 0;
     background-color: #EC7979;
     color: #FFF;
     border: none;
 }
-.tab-content .btn-1:hover {
+.tabs__content .btn-1:hover {
     background-color: #AB4949;
 }
-.tab-content .btn-1:active {
+.tabs__content .btn-1:active {
     background: #EC7979;
     box-shadow: inset 0px 0px 10px #AB4949;
+}
+.tabs label {
+    position: relative;
+    width: 200px;
+    padding: 10px 0;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+}
+.tabs label:has(input:checked) {
+    border-left: 2px solid #C6CBCD;
+    border-top: 2px solid #C6CBCD;
+    border-right: 2px solid #C6CBCD;
+    border-radius: 5px 5px 0 0;
+}
+.tabs label:has(input:checked)::after {
+    position: absolute;
+    content: '';
+    width: 200px;
+    border-bottom: 4px solid #FFF;
+    left: 0px;
+    bottom: -2px;
+    z-index: 2;
+}
+.tabs label:has(input:checked) + .tabs__content {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 /* options */
