--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,10 +96,12 @@ h4 {
 /* header */
 .header {
     background-color: #000;
-    padding: 0 170px;
 }
 .wrapper_header {
     width: 100%;
+}
+.header__burger {
+    display: none;
 }
 .header__content {
     display: flex;
@@ -108,6 +110,7 @@ h4 {
 }
 .header__logo {
     margin: 22px 0;
+    margin-left: -50px;
 }
 .header__navigation a {
     display: inline-block;
@@ -231,6 +234,8 @@ h4 {
     margin-top: 43px;
     color: #86878B;
 }
+
+/* awesome */
 .awesome__card {
     display: flex;
     flex-direction: column;
@@ -276,8 +281,13 @@ h4 {
 .tabs__content .tabs__content__left h3 {
     margin: 50px 0 80px 0;
 }
-.tabs__content .tabs__content__left p:not(:last-child){
+.tabs__content .tabs__content__left p:not(:last-child) {
     margin-bottom: 25px;
+}
+.tabs__content__right {
+    display: flex;
+    flex-grow: 1;
+    background: #FFF url(../images/statue-of-liberty.png) no-repeat center center / cover;
 }
 .tabs__content .btn-1 {
     padding: 20px 90px;
@@ -395,6 +405,15 @@ h4 {
 }
 .saying__card__person h4 {
     padding: 20px 0 32px 0;
+}
+.saying__card__dots {
+    display: none;
+}
+.saying__card__dot {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 1px solid #86878B;
 }
 
 /* design */
