--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,9 +88,10 @@ h4 {
     color: #EC7979;
     border: 3px solid #EC7979;
 }
-.btn1:active {
+.btn-1:active {
     background: #AB4949;
-    border: none;
+    border: 3px solid #AB4949;
+    color: #FFF;
 }
 
 /* header */
@@ -124,6 +125,10 @@ h4 {
 }
 .header__navigation a:hover {
     background-color: #EC7979;
+    text-transform: uppercase;
+}
+.header__navigation a:active {
+    background-color: #AB4949;
     text-transform: uppercase;
 }
 
@@ -213,6 +218,7 @@ h4 {
     background-color: #AB4949;
 }
 .main__form input[type="submit"]:active {
+    background-color: #EC7979;
     box-shadow: inset 0px 0px 10px #AB4949;
 }
 
@@ -410,8 +416,8 @@ h4 {
     display: none;
 }
 .saying__card__dot {
-    width: 20px;
-    height: 20px;
+    width: 9px;
+    height: 9px;
     border-radius: 50%;
     border: 1px solid #86878B;
 }
